Ajoute l'affichage du nombre de produits dans la catégorie

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -44,6 +44,12 @@
                                 <th>Description</th>
                                 <td>{{ category.description }}</td>
                             </tr>
+                            {% if category.productCount is defined %}
+                            <tr>
+                                <th>Nombre de produits</th>
+                                <td>{{ category.productCount }}</td>
+                            </tr>
+                            {% endif %}
                         </tbody>
                     </table>
                 </div>
