--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -41,7 +41,7 @@
                         </a>
                     </div>
                     
-                    {% if searchTerm is defined and searchTerm is not empty %}
+                    {% if isPaginationActive %}
                     <div class="col-md-12 mt-3">
                         <div class="row">
                             <div class="col-md-3">
@@ -121,7 +121,7 @@
             </div>
             
             {# Pagination #}
-            {% if searchTerm is defined and searchTerm is not empty %}
+            {% if isPaginationActive %}
             <div class="d-flex justify-content-between align-items-center mt-4">
                 <div>
                     <p class="mb-0">Page {{ currentPage + 1 }}</p>
@@ -133,6 +133,7 @@
                             <li class="page-item">
                                 <a class="page-link" href="{{ path('product_index', {
                                     'search': searchTerm, 
+                                    'category': selectedCategory,
                                     'page': currentPage - 1, 
                                     'size': pageSize, 
                                     'sort': sort
@@ -153,6 +154,7 @@
                             <li class="page-item">
                                 <a class="page-link" href="{{ path('product_index', {
                                     'search': searchTerm, 
+                                    'category': selectedCategory,
                                     'page': currentPage is defined ? currentPage + 1 : 1, 
                                     'size': pageSize, 
                                     'sort': sort
